--- a/ShakeMate/app/src/main/res/values/strings.xml
+++ b/ShakeMate/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ShakeMate</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_hint">Martini…</string>
 </resources>
